# ml-template

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/project/: project.py
src/project/data/: datamodule.py  dataset.py
src/project/model/: model.py
util/: args.py
