[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.7",
    "lightning==2.4.0",
    "pytest==8.3.3",
    "torch==2.5.0",
    "ujson==5.10.0",
]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
project = "project.project:start"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"