[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = "<=3.12.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonargparse[signatures]==4.35.0",
    "lightning==2.5.0.post0",
    "pytest==8.3.4",
    "tensorboard==2.18.0",
    "torch==2.5.1",
]

[tool.setuptools.package-data]
"project" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
project = "project.project:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"